修改happy new year

--- a/Happy new year/demo.html
+++ b/Happy new year/demo.html
@@ -28,8 +28,8 @@
 				width:75px;
 				height:25px;
 				background:#000;
-				animation:shadow 600ms infinite;
-				-webkit-animation:shadow 600ms cubic-bezier(0.165,0.84,0.44,1.0) infinite;
+				animation:shadow 1s cubic-bezier(0.165,0.84,0.44,1.0) infinite;
+				-webkit-animation:shadow 1s cubic-bezier(0.165,0.84,0.44,1.0) infinite;
 			}
 			.ball{
 				width:60px;
@@ -39,8 +39,8 @@
 				line-height:60px;
 				font-weight:bold;
 				bottom:40px;
-				animation:ball 600ms cubic-bezier(0.165,0.84,0.44,1.0) infinite;
-				-webkit-animation:ball 600ms cubic-bezier(0.165,0.84,0.44,1.0) infinite;
+				animation:ball 1s cubic-bezier(0.165,0.84,0.44,1.0) infinite;
+				-webkit-animation:ball 1s cubic-bezier(0.165,0.84,0.44,1.0) infinite;
 			}
 			@keyframes ball{
 				0%{transform:translateY(0px);}
