--- a/Rotating heart/demo.html
+++ b/Rotating heart/demo.html
@@ -56,9 +56,7 @@
 
 	<body>
 	
-		<div class="heart_div">
-			
-		</div>
+		<div class="heart_div"></div>
 		<script>
 			var heart_div = document.getElementsByClassName("heart_div")[0];
 			for(var i = 1;i<37;i++){
