去掉文件夹空格

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <li><a href="Clock/demo.html" target="_blank">时钟</a></li>
     <li><a href="Rotating heart/demo.html" target="_blank">旋转心</a></li>
 	<li><a href="Happy new year/demo.html" target="_blank">新年快乐</a></li>
-	<li><a href="Rotating cube/demo1.html" target="_blank">旋转立方体</a></li>
+	<li><a href="RotatingCube/demo1.html" target="_blank">旋转立方体</a></li>
 </ul>
 </body>
 </html>
