--- a/RotatingCube/demo.html
+++ b/RotatingCube/demo.html
@@ -2,10 +2,12 @@
 	<head>
 		<meta charset="utf-8" />
 		<style>
-			html{height:100%;}
+			html{
+				height:100%;
+				background:radial-gradient(ellipse at center,#430d6d 0%,#000 100%);
+			}
 			body{
 				padding:0;margin:0;height:100%;
-				background:radial-gradient(ellipse at center,#430d6d 0%,#000 100%);
 				perspective:1000px;
 			}
 			cube{
