--- a/RotatingCube/demo.html
+++ b/RotatingCube/demo.html
@@ -31,10 +31,10 @@
 				position:absolute;
 				width:100%;height:100%;
 				
-				background:linear-gradient(180deg,rgba(0,0,0,0) 0px,rgba(54,226,248,.5) 0px,
-					rgba(54,226,248,.5) 3px,rgba(0,0,0,0) 0px),
+				background:linear-gradient(rgba(0,0,0,0) 0px,rgba(54,226,248,.5) 0px,
+					rgba(54,226,248,.5) 3px,rgba(0,0,0,0) 3px),
 					linear-gradient(90deg,rgba(0,0,0,0) 0px,rgba(54,226,248,.5) 0px,
-					rgba(54,226,248,.5) 3px,rgba(0,0,0,0) 0px);
+					rgba(54,226,248,.5) 3px,rgba(0,0,0,0) 3px);
 					
 				background-size:2.5em 2.5em,2.5em 2.5em;
 				border:2px solid rgba(54,226,248,.5);
