--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="RotatingHeart/demo.html" target="_blank">旋转心</a></li>
 	<li><a href="HappyNewYear/demo.html" target="_blank">新年快乐</a></li>
 	<li><a href="RotatingCube/demo1.html" target="_blank">旋转立方体</a></li>
+	<li><a href="RunningMan/demo.html" target="_blank">奔跑的小人</a></li>
 </ul>
 </body>
 </html>
