--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<li><a href="HappyNewYear/demo.html" target="_blank">新年快乐</a></li>
 	<li><a href="RotatingCube/demo1.html" target="_blank">旋转立方体</a></li>
 	<li><a href="RunningMan/demo.html" target="_blank">奔跑的小人</a></li>
+	<li><a href="SVG/textPath.html" target="_blank">路径文本</a></li>
 </ul>
 </body>
 </html>
