--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<li><a href="RunningMan/demo.html" target="_blank">奔跑的小人</a></li>
 		<li><a href="SVG/textPath.html" target="_blank">路径文本</a></li>
 		<li><a href="HackerEmpire/demo.html" target="_blank">黑客帝国</a></li>
+		<li><a href="360NavigationDrag/demo.html" target="_blank">360导航拖拽</a></li>
 		</ul>
 	</body>
 </html>
