--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<li><a href="HackerEmpire/demo.html" target="_blank">黑客帝国</a></li>
 		<li><a href="360NavigationDrag/demo.html" target="_blank">360导航拖拽</a></li>
 		<li><a href="RotatingBall/demo.html" target="_blank">旋转球</a></li>
+		<li><a href="NeonLight/demo.html" target="_blank">霓虹灯</a></li>
 		</ul>
 	</body>
 </html>
