HTML5 Canvas 多球无规律碰撞反弹

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 		<li><a href="360NavigationDrag/demo.html" target="_blank">360导航拖拽</a></li>
 		<li><a href="RotatingBall/demo.html" target="_blank">旋转球</a></li>
 		<li><a href="NeonLight/demo.html" target="_blank">霓虹灯</a></li>
+		<li><a href="BounceAndCollision/BallBounce.html" target="_blank">多球无规律运动</a></li>
+		<li><a href="BounceAndCollision/BallBounceAndCollision.html" target="_blank">多球碰撞和反弹</a></li>
 		</ul>
 	</body>
 </html>
